--- a/vertigo.html
+++ b/vertigo.html
@@ -7,4 +7,12 @@
         <title> Vertigo </title>
         <link rel="stylesheet" href="assets/style.css"
     </head>
+    <body> 
+        Paramount Pictures
+        James Stewart
+        Kim Novak
+        In alfred hitchcocks masterpiece
+        "Vertigo"
+        
+    </body>
 </html>
