--- a/vertigo.html
+++ b/vertigo.html
@@ -8,11 +8,17 @@
         <link rel="stylesheet" href="assets/style.css"
     </head>
     <body> 
-        Paramount Pictures
-        James Stewart
-        Kim Novak
-        In alfred hitchcocks masterpiece
-        "Vertigo"
-        
-    </body>
+        <div class="wrapper">
+            <span class="kicker">paramount Pictures</span>
+            <h1> 
+                <span class="larger-names">
+                James Stewart <br/>
+                Kim Novak
+                </span>
+                In alfred hitchcocks <br/> masterpiece
+                <span class="title">"Vertigo</span>
+            </h1>
+            <img src="assets/saul-bass-vertigo.svg" alt="graphic from saul bass's vertigo photo"
+        </div>
+    </body> 
 </html>
