--- a/vertigo.html
+++ b/vertigo.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">        <title> Vertigo </title>
-        <link rel="stylesheet" href="assets/style.css"
+        <link rel="stylesheet" href="assets/style.css">
     </head>
     <body> 
         <div class="wrapper">
@@ -17,7 +17,7 @@
                 In alfred hitchcocks <br/> masterpiece
                 <span class="title">"Vertigo</span>
             </h1>
-            <img src="assets/saul-bass-vertigo.svg" alt="graphic from saul bass's vertigo photo"
+            <img src="assets/saul-bass-vertigo.svg" alt="graphic from saul bass's vertigo photo">
         </div>
     </body> 
 </html>
