--- a/vertigo.html
+++ b/vertigo.html
@@ -3,21 +3,54 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">        <title> Vertigo </title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">        
+        <title> Vertigo by Saul Bass </title>
         <link rel="stylesheet" href="assets/style.css">
     </head>
     <body> 
         <div class="wrapper">
-            <span class="kicker">paramount Pictures</span>
+            <span class="kicker">Paramount Pictures</span>
             <h1> 
-                <span class="larger-names">
-                James Stewart <br/>
-                Kim Novak
-                </span>
-                In alfred hitchcocks <br/> masterpiece
-                <span class="title">"Vertigo</span>
+                <span class="larger-names">James Stewart <br/>
+                Kim Novak</span><br/>
+                In alfred hitchcocks <br/> 
+                <span class="wide-letterspacing"> Masterpiece</span>
+                <span class="title">'Vertigo'</span>
             </h1>
             <img src="assets/saul-bass-vertigo.svg" alt="graphic from saul bass's vertigo photo">
         </div>
-    </body> 
+        <footer>
+            <div class="topline">
+                <div class="left">
+                    <span class="tiny">Co Starring</span>
+                    <span class="largename">Barbara Bel Geddes</span>
+                </div>
+                <div class="right">
+                    <div class="right-inner">
+                        <div>
+                            <span class="tiny">With</span> 
+                            <span class="smallname">Tom Helmore Henry Jones</span>
+                        </div>
+                        <div>
+                            <span class="tiny">Directed By</span>
+                            <span class="smallname">Alfred Hitchcock</span>
+                        </div>
+                        <div>
+                            <span class="tiny">Screenplay By</span>
+                            <span class="smallname">Alec Coppel & Samuel Taylor Technicolor</span>
+                        </div>
+                    </div>
+                    <div class="smallwide">
+                        Based upon the novel 'De'Entre le Morts' by Pierre Boileau and Thomas Narcejac
+                        Music by Bernard Herrmann
+                    </div>    
+                </div>
+                <div class="logos">
+                    <img src="assets/paramount-logo.svg" alt="Paramount Pictures logo">
+                    <img src="assets/vistavision.svg" alt="VistaVision logo">
+                </div>
+            </div>    
+            <span class="copyright">1958 Paramount Pictures Corporation, Country of Origin U.S.A.</span>
+        </footer>  
+    </body>
 </html>
